Update index file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-
-  <div class="container-card">
+  <main class="container-card">
     <div class="qr-img-section">
       <img src="images/image-qr-code.png" alt="QR code">
     </div>
@@ -21,12 +20,12 @@
     <div class="subtitle-card">
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
-  </div>
+  </main>
 
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Milton DJC</a>.
+    Coded by <a href="https://github.com/MiltonDJC">Milton DJC</a>.
   </div>
 </body>
 
