--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <main class="container-card">
+  <main class="container-card" role="main">
     <div class="qr-img-section">
       <img src="images/image-qr-code.png" alt="QR code">
     </div>
@@ -22,7 +22,7 @@
     </div>
   </main>
   <footer>
-    <div class="attribution">
+    <div class="attribution" role="contentinfo">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/MiltonDJC">Milton DJC</a>.
     </div>
