--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <main class="container-card" role="main">
+  <main class="container-card">
     <div class="qr-img-section">
       <img src="images/image-qr-code.png" alt="QR code">
     </div>
